# bevy_mod_bbcode

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
assets/: CREDITS.md
benches/: parsing.rs
benches/input/: sample_5000_raw.bbcode  sample_5000_simple.bbcode
examples/: dynamic.rs  static.rs
src/: lib.rs
src/bbcode/: mod.rs  parser.rs
src/bevy/: bbcode.rs  color.rs  conversion.rs  mod.rs  plugin.rs  settings.rs
src/bevy/font/: mod.rs  plugin.rs  registry.rs
