[package]
name = "bevy_mod_bbcode"
version = "0.2.0"
edition = "2021"
description = "Use BBCode-formatted text inside of Bevy."
readme = "README.md"
repository = "https://github.com/TimJentzsch/bevy_mod_bbcode"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy"]
categories = ["game-development"]
exclude = ["assets/**/*", ".github/**/*"]

[dependencies]
ab_glyph = "0.2.28"
fontdb = "0.20.0"
nom = "7.1.3"
tinyvec = "1.8.0"

[dependencies.bevy]
version = "0.15.0-rc.2"
default-features = false
features = ["bevy_text", "bevy_ui"]

[dev-dependencies.bevy]
version = "0.15.0-rc.2"
